--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "seed": "node seeds/seed.js",
-    "dbStart": "node models/index.js && node seeds/seed.js && node server.js"
+    "dbStart": "node models/index.js && node seeds/seed.js && node server.js",
+    "build": "npm run dbStart && npm run seed"
   },
   "repository": {
     "type": "git",
