--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server.js",
     "seed": "node seeds/seed.js",
     "dbStart": "node models/index.js && node seeds/seed.js && node server.js",
-    "build": "npm run dbStart && npm run seed"
+    "build": "npm run dbStart"
   },
   "repository": {
     "type": "git",
